@@ -32,6 +32,7 @@ Licensed under the GPL<br>
 	<li>ar5k
 	<li>drone
 	<li>airport (viha)
+	<li>acx100
 	</ol>
 <li>GPS Support
 <li>Compiling
@@ -356,6 +357,16 @@ and many more new features.<br>
 		Notes:  Drivers available from http://www.dopesquad.net/security/.  Current Kismet support
 		is for Viha 0.0.1a, but it MAY work with newer versions.  Normal OSX drivers will not work in
 		RFMon mode.
+		<br>
+	</ul>
+	<li>ACX100 (TI 22MBIT)
+	<br>
+	Cards: 22mbit 802.11b+ cards such as the Dlink 650+
+	<br>
+	<ul>
+		<li>'acx100': ACX100 OSS drivers<br>
+		Capture interface: wlanX<br>
+		Notes: Drivers available from http://acx100.sourceforge.net.
 		<br>
 	</ul>
 	</ol>
