@@ -1,5 +1,6 @@
 Jul 17 2003  2.9.1  Added full 802.11a channel list to kismet.conf
                     Added frequency to channel translation
+                    Added cardtype acx100 for TI 22mbit cards
 Jul 16 2003  2.9.1  Added carrier 802.11b+ for future use
 Jul 14 2003  2.9.1  Fixed configure on OSX to enable viha correctly
 Jul 13 2003  2.9.1  Fixed 'Linksys' SSID in ap_manuf
